feat: add stdlib modules
  Add new standard library modules:
  - http: HTTP client functions (http_get, http_post, etc.) - feature-gated
  - json: JSON parsing and serialization (json_parse, json_stringify, etc.)
  - time: Time functions (time_now, sleep, format_timestamp, etc.)
  - random: Random number generation (random, random_int, shuffle, uuid, etc.)
  - crypto: Base64/hex encoding and hashing (base64_encode, hash_djb2, etc.)
  - fs: Filesystem operations (mkdir, read_dir, path_join, etc.)

Also adds type introspection functions (typeof, is_int, is_float, etc.)

--- a/crates/Cargo.toml
+++ b/crates/Cargo.toml
@@ -1,6 +1,16 @@
 [workspace]
 resolver = "2"
-members = ["crates/*"]
+members = [
+    "squam",
+    "squam-compiler",
+    "squam-embed",
+    "squam-lexer",
+    "squam-parser",
+    "squam-stdlib",
+    "squam-types",
+    "squam-vm",
+    "squam-wasm",
+]
 
 [workspace.package]
 version = "0.1.0"
@@ -14,14 +24,14 @@ categories = ["compilers", "development-tools"]
 
 [workspace.dependencies]
 # Internal
-squam-lexer = { path = "crates/squam-lexer" }
-squam-parser = { path = "crates/squam-parser" }
-squam-types = { path = "crates/squam-types" }
-squam-compiler = { path = "crates/squam-compiler" }
-squam-vm = { path = "crates/squam-vm" }
-squam-stdlib = { path = "crates/squam-stdlib" }
-squam-embed = { path = "crates/squam-embed" }
-squam-wasm = { path = "crates/squam-wasm" }
+squam-lexer = { path = "squam-lexer" }
+squam-parser = { path = "squam-parser" }
+squam-types = { path = "squam-types" }
+squam-compiler = { path = "squam-compiler" }
+squam-vm = { path = "squam-vm" }
+squam-stdlib = { path = "squam-stdlib", default-features = false }
+squam-embed = { path = "squam-embed" }
+squam-wasm = { path = "squam-wasm" }
 
 # External
 thiserror = "2"
