--- a/crates/squam-wasm/Cargo.toml
+++ b/crates/squam-wasm/Cargo.toml
@@ -12,8 +12,10 @@ crate-type = ["cdylib", "rlib"]
 squam-compiler = { workspace = true }
 squam-parser = { workspace = true }
 squam-vm = { workspace = true }
-squam-stdlib = { workspace = true }
+squam-stdlib = { workspace = true, default-features = false }
 wasm-bindgen = "0.2"
+js-sys = "0.3"
+getrandom = { version = "0.2", features = ["js"] }
 serde = { version = "1", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
 
